[gd_scene load_steps=7 format=2]

[ext_resource path="res://IndustrialAssets/2 Background/1.png" type="Texture" id=1]
[ext_resource path="res://IndustrialAssets/2 Background/2.png" type="Texture" id=2]
[ext_resource path="res://IndustrialAssets/2 Background/3.png" type="Texture" id=3]
[ext_resource path="res://IndustrialAssets/2 Background/4.png" type="Texture" id=4]
[ext_resource path="res://IndustrialAssets/2 Background/5.png" type="Texture" id=5]
[ext_resource path="res://scripts/background_parallax.gd" type="Script" id=6]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 6 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1368, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxLayer1"]
position = Vector2( 684, 384.5 )
scale = Vector2( 2.375, 2.36728 )
texture = ExtResource( 1 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1368, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxLayer2"]
position = Vector2( 684, 384.5 )
scale = Vector2( 2.375, 2.36728 )
texture = ExtResource( 2 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1368, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxLayer3"]
position = Vector2( 684, 384.5 )
scale = Vector2( 2.375, 2.36728 )
texture = ExtResource( 3 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1368, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxLayer4"]
position = Vector2( 684, 384.5 )
scale = Vector2( 2.375, 2.36728 )
texture = ExtResource( 4 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1368, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxLayer5"]
position = Vector2( 684, 384.5 )
scale = Vector2( 2.375, 2.36728 )
texture = ExtResource( 5 )
